# dev-setup

./: .env.example  .gitignore  CLAUDE.md  README.md  pnpm-lock.yaml
.github/workflows/: docker-rewind.yml
ai/mcp/: servers.md
containers/gitea/: docker-compose.yml
containers/neo4j/: docker-compose.yml
iac/claude-vm/: README.md  deploy.py
iac/claude-vm/configuration/: ansible.cfg  playbook.yml  requirements.yml
iac/claude-vm/configuration/files/: claude-settings.json
iac/claude-vm/configuration/group_vars/: all.yml
iac/claude-vm/provision/: main.tf  variables.tf
infra/: .env.example  .gitignore  CLAUDE.md  README.md
infra/claude-vms/configuration/: playbook.yml  requirements.yml
infra/claude-vms/configuration/files/: claude-settings.json  claude-settings.json.j2  claude.json
infra/claude-vms/configuration/group_vars/: all.yml
infra/claude-vms/provision/: outputs.tf  provider.tf  terraform.tfvars.example  variables.tf
infra/core-services/configuration/: playbook.yml
infra/core-services/configuration/files/: Caddyfile.j2  plane.env.j2  rewind.env.j2
infra/core-services/configuration/group_vars/: all.yml
infra/core-services/provision/: main.tf  outputs.tf  variables.tf
infra/neo4j/configuration/: playbook.yml
infra/neo4j/configuration/files/: docker-compose.yml.j2
infra/neo4j/provision/: main.tf  outputs.tf  variables.tf  versions.tf
infra/orchestration/: cli.py  config.yaml  pyproject.toml
infra/orchestration/harness/: __init__.py  __main__.py
infra/orchestration/harness/cli/: __init__.py  app.py
infra/orchestration/harness/cli/commands/: __init__.py  all_cmd.py  core_services.py  neo4j.py  plane.py  status.py  vms.py
infra/orchestration/harness/core/: __init__.py  config.py  context.py  exitcodes.py  logger.py  runner.py
infra/orchestration/harness/deployers/: __init__.py  base.py  claude_vms.py  core_services.py  neo4j.py  plane.py
infra/orchestration/harness/infra/: __init__.py  ansible.py  ssh.py  tofu.py
infra/orchestration/tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_exitcodes.py  test_logger.py  test_runner.py
infra/plane/configuration/: playbook.yml  requirements.yml
infra/plane/provision/: main.tf  outputs.tf  variables.tf
rewind/: .dockerignore  docker-compose.prod.yml
setups/: mac.md  ubuntu.md
(+5 files in other folders)
